# pitchme

./: README.md  docker-compose.yaml  jobs.sh  pyproject.toml  setup.cfg
core/models/enums/: filters.py
core/models/pydantic/json_api/: filters.py
core/utils/databases/: alchemy.py  create_database.py  postgres_helper.py
core/utils/filters/: filter_converter.py
events/: README.md  migration.py  pathmagic.py  run.sh
events/app/: config.py  helpers.py  main.py  routes.py
events/app/api/: events.py  events_themes.py  filters.py  theme.py  users.py
events/app/crud/: event.py
events/app/models/alchemy/: event_theme.py  events.py  filters.py  theme.py  users.py
events/app/models/pydantic/: events.py  events_schema.py  filters.py  theme.py  users.py
events/migrations/: 0001_initial.py  0002_auths.py
